# tracewell

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  prompt.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: 00-roadmap.md  01-phase-0-core.md  02-phase-1-mvp.md  03-phase-2-etw-smart.md  04-phase-3-disk-cleanup.md  05-phase-4-drivers.md  06-phase-5-ux-updater.md  07-phase-6-thermal.md
docs/adr/: 0001-winui3-poc-fallback-to-win32-d2d.md
docs/superpowers/plans/: 2026-07-23-winui3-poc.md  2026-07-24-win32-d2d-ui-framework.md
docs/superpowers/specs/: 2026-07-23-winui3-poc-design.md  2026-07-24-win32-d2d-ui-framework-design.md
src/: CMakeLists.txt
src/app/: App.manifest  App.vcxproj  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  main.cpp  pch.cpp  pch.h
src/app/dispatch/: Dispatcher.cpp  Dispatcher.h
src/app/mvvm/: MainViewModel.cpp  MainViewModel.h  Property.h  ViewModel.h
src/app/render/: RenderDevice.cpp  RenderDevice.h
src/app/shell/: MainWindow.cpp  MainWindow.h
src/app/ui/: Button.cpp  Button.h  ListView.cpp  ListView.h  Panel.cpp  Panel.h  TextBlock.cpp  TextBlock.h  Theme.cpp  Theme.h  Widget.h
src/cli/: main.cpp
src/core/: collector.h  diff.cpp  diff.h  snapshot.cpp  snapshot.h  storage.cpp  storage.h  win_util.h
src/core/collectors/: disk_pdh.cpp  disk_pdh.h  services.cpp  services.h  startup_registry.cpp  startup_registry.h
tests/: CMakeLists.txt  test_diff.cpp  test_dispatcher.cpp  test_property.cpp  test_storage.cpp
